[package]
name = "fs-fuse-jcb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3"
libc = "0.2"
log = "0.4"
fuse = { version = "0.3", optional = true }
structopt = "0.3"
env_logger = "0.9"
git-version = "0.3"
fs-jcb = { path = "../fs-jcb" }
bfs-jcb = { path = "../bfs-jcb"}

